--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,13 +1,16 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Title</title>
 </head>
 <body>
-    <p>this is error page!</p>
+<p>
+    This is <span th:text="${statusCode} ?: _">???</span> error page.
+</p>
+<ul>
+    <li>errorCode: <span th:text="${errorCode} ?: _">?</span></li>
+    <li>message: <span th:text="${message} ?: _">?</span></li>
+</ul>
 </body>
 </html>
